[package]
name = "chapter_8_exercises"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chapter_8_exercises"
path = "src/main.rs"

[lib]
name = "chapter_8_exercises"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
